modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/admin.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/cart.cpython-311.pyc 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/context_processors.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/__pycache__/models.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/admin.py 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/cart.py 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/migrations/0001_initial.py 	new file:   11. Django Ecommerce Website/ecommerce_website/cart/migrations/__pycache__/0001_initial.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/cart/models.py 	modified:   11. Django Ecommerce Website/ecommerce_website/db.sqlite3 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/settings.py 	modified:   11. Django Ecommerce Website/ecommerce_website/ecommerce_website/urls.py 	modified:   11. Django Ecommerce Website/ecommerce_website/static/js/main.js 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/include/card.html
@@ -28,7 +28,7 @@
         {% endif %} 
         <div class="card-btn">
             <a href="{% url 'product' product.id %}"><button type="button">View</button></a>
-                <button type="button" value="{{ product.id }}" id="add-cart">Add to Cart</button>
+                <button type="button" value="{{ product.id }}" class="add-to-cart">Add to Cart</button>
 
         </div>
     </div>
