modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/navbar.html 	modified:   11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html

--- a/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
+++ b/11. Django Ecommerce Website/ecommerce_website/store/templates/store/product.html
@@ -88,6 +88,7 @@
                 success: function(json){
                     // console.log(json)
                     document.getElementById("cart_quantity").textContent = json.qty
+                    document.getElementById("cart_qty").textContent = json.qty
                 },
 
                 error: function(xhr, errmsg, err){
