--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
@@ -8,6 +8,7 @@
     --main-color: orange;
     --white-color: white;
     --black-color: black;
+    --grey-color: #c9d1d1;
 }
 
 html {
@@ -45,9 +46,9 @@ padding: .5em;
 
 
 .product-card {
-    width: 19%;
+    width: 19.5%;
     padding: .3em;
-    margin-bottom: 1em;
+    margin: 0 auto 1em auto;
     box-shadow: 2px 0 3px rgba(0, 0, 0, 0.1);
     background-color: var(--white-color);
 }
@@ -56,30 +57,24 @@ padding: .5em;
     cursor: pointer;
 }
 
-.image {
-    width: 100%;
-    height: 10rem;
-    text-align: center;
-    
-}
 .image img {
     max-width: 100%;
     max-height: 100%;
 }
 
-.card-text {
+.product-information {
     text-align: center;
-    background-color: #c9d1d1;
+    background-color: var(--grey-color);
 }
 
-.card-btn {
+.card-buttons{
     display: flex;
     justify-content: space-between;
     text-align: center;
     width: 100%;
 }
 
-.card button {
+.card-buttons button {
     color: black;
     background-color: var(--main-color);
     padding: .5em 1.5em;
@@ -88,27 +83,52 @@ padding: .5em;
     border: none;
 }
 
-.card button:hover {
+.card-buttons button:hover {
     opacity: 0.8;
 }
 
+@media (min-width: 1600px) {
+    body {
+        background-color: #c9d1d1;
+    }
+    .body-container, .navbar{
+        max-width: 1600px;
+        margin: 0 auto;
+    }
+
+
+    .container {
+        width: 100%;
+    }
+    
+}
+
+@media (max-width: 1200px) {
+    .product-card  {
+        width: 24%;
+        margin: .5em auto 0 auto;
+    }
+}
+
 @media (max-width: 1000px) {
-    .card {
+    .product-card  {
         width: 32%;
         margin: .5em auto 0 auto;
     }
 }
 @media (max-width: 780px) {
-    .card {
+    .product-card  {
         width: 49%;
     }
 }
-@media (max-width: 700px) {
-    .body-container {
-        margin-left: 0;
-        padding: .5em;
-        margin-top: 0;
+
+@media (max-width: 480px) {
+    .product-card  {
+        width: 100%;
     }
+}
+@media (max-width: 700px) {
+    
 
     .header {
         height: 200px;
