new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/banner.jpg 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css 	new file:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/header.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/index.html 	modified:   Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/navbar.html

--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
@@ -25,18 +25,46 @@ text-decoration: none;
 }
 
 .container {
-min-height: 100vh;
-background-color: orange;
-width: 95%;
-margin: 3em auto;
-margin-bottom: 2em;
-padding: .5em;
+    min-height: 100vh;
+    background-color: orange;
+    width: 95%;
+    margin: 3em auto;
+    margin-bottom: 2em;
+    padding: .5em;
 }
 
+header .hero-header{
+    background-image: url(banner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    top: 50%;
+}
+
+.header h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
+  
+@media (max-width: 600px) {
+    .header {
+    height: 30vh;
+    }
+
+    .header h1 {
+    font-size: 3rem
+    }
+}
 
 
 .section-title {
     text-align: center;
+    background-color: var(--white-color);
 }
 
 .product-container {
