--- a/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
+++ b/Responsive Fixed Navigation Bar and Fixed Mobile- Devices Footer - HTML, CSS, JS/css/main.css
@@ -83,11 +83,19 @@ header .hero-header{
     background-color: var(--white-color);
 }
 
-.product-card img:hover {
+.product-image {
+    width: 100%;
+    height: 35vh;
+    justify-content: center;
+}
+
+.product-image:hover {
     cursor: pointer;
 }
 
-.image img {
+.product-image img {
+    width: 100%;
+    height: auto;
     max-width: 100%;
     max-height: 100%;
 }
