modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/__pycache__/settings.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/settings.py 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/urls.py 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/banner.jpg 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/cart.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/login.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/main.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/navbar.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/product.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/js/navbar.js 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/cart.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/checkout.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/header.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/index.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/navbar.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/register.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/urls.py 	modified:   13. Djan

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 </head>
 <body>
-    
+    {% include 'store/navbar.html' %}
     {% block content %}
         
     {% endblock content %}
+
+    <script src="{% static 'js/navbar.js' %}"></script>
         
 </body>
 </html>
