--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'store/base.html' %}
 
 
 {% block title %}
@@ -11,3 +11,4 @@
     <h1>Goodmorning Africa</h1>
 {% endblock content %}
     
+
