modified:   13. Django- Ecommerce Website/ecommerce/static/css/main.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/images/apples-805124.jpg 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/navbar.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/navbar.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/navbar.html
@@ -1,51 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navigation Bar</title>
-  <link rel="stylesheet" href="css/navbar.css">
-</head>
-<body>
-
-    <nav>
-        <div class="navbar">
-            <div class="navbar-mobile">
-                <a href="index.html" class="logo">SqCodes</a>
-                <li class="dropdown hide">
-                    <a href="#" class="dropdown account-link ">My Account&#9662</a>
+<nav>
+    <div class="navbar">
+        <div class="navbar-mobile">
+            <a href="{% url 'home' %}" class="logo">SqCodes</a>
+            <li class="dropdown hide">
+                <a href="#" class="dropdown account-link ">My Account&#9662</a>
+                <div class="dropdown-content">
+                    <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
+                    <hr>
+                    <a href="{% url 'register' %}" class="register-button" id="signup-button">Register</a>
+                </div>
+            </li>
+            <a href="{% url 'home' %}" class="hide cart-mobile"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span></a>
+            <a href="#" class="hide toggle-button" id="toggler" style="font-size: 30px;">&#8801;</a>
+        </div>
+        <div class="navbar-links" id="navbar-links">
+            <ul>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="#">Products&#9662;</a></li>
+                <li><a href="#">Category&#9662;</a></li>
+                <li class="dropdown hide-on-mobile">
+                    <a href="#" class="account-link">My Account&#9662</a>
                     <div class="dropdown-content">
-                        <a href="login.html" class="login-button" id="login-button">Login</a>
+                        <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
                         <hr>
-                        <a href="register.html" class="register-button" id="signup-button">Register</a>
+                        <a href="{% url 'register' %}" class="register-button" id="signup-button">Register</a>
                     </div>
                 </li>
-                <a href="cart.html" class="hide cart-mobile"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span></a>
-                <a href="#" class="hide toggle-button" id="toggler" style="font-size: 30px;">&#8801;</a>
-            </div>
-            <div class="navbar-links" id="navbar-links">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Products&#9662;</a></li>
-                    <li><a href="#">Category&#9662;</a></li>
-                    <li class="dropdown hide-on-mobile">
-                        <a href="#" class="account-link">My Account&#9662</a>
-                        <div class="dropdown-content">
-                            <a href="login.html" class="login-button" id="login-button">Login</a>
-                            <hr>
-                            <a href="register.html" class="register-button" id="signup-button">Register</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="cart">
-                <a href="cart.html"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span></a>
-            </div>
+            </ul>
         </div>
-    </nav>
-
-
-
-
-</body>
-</html>
+        <div class="cart">
+            <a href="{% url 'home' %}"><svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="24"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg><span class="cart-count">0</span></a>
+        </div>
+    </div>
+</nav>
