new file:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/admin.cpython-311.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/apps.cpython-311.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/models.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/__pycache__/views.cpython-311.pyc 	new file:   13. Django- Ecommerce Website/ecommerce/cart/migrations/__pycache__/__init__.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html 	modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/checkout.html 	modified:   13. Django- Ecommerce Website/ecommerce/cart/views.py 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/__pycache__/settings.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/__pycache__/urls.cpython-311.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/settings.py 	modified:   13. Django- Ecommerce Website/ecommerce/ecommerce/urls.py 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/login.css 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/navbar.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/images/avatar.png 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	new file:   13. Django- Ecommerce Website/ecommerce/store/templates/store/footer.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/home.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/register.html

--- a/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
+++ b/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
@@ -12,7 +12,7 @@
     <div class="cart-container">
         <table>
             <div class="continue-shopping">
-                <a href="url 'home'"><button>&larr; Continue Shopping</button></a>
+                <a href="{% url 'home' %}"><button>&larr; Continue Shopping</button></a>
             </div>
             <hr>
             <thead>
