--- a/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/checkout.html
+++ b/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/checkout.html
@@ -83,7 +83,7 @@
         </div>
         <div class="order-summary">
             <div class="back-to-cart">
-                <a href="cart.html"><button>&larr; Back to Cart</button></a>
+                <a href="{% url 'cart' %}"><button>&larr; Back to Cart</button></a>
             </div>
             
             <div class="cart-elements-container">
