--- a/13. Django- Ecommerce Website/ecommerce/static/css/login.css
+++ b/13. Django- Ecommerce Website/ecommerce/static/css/login.css
@@ -1,117 +1,120 @@
 /* login and registratin forms */
 .form-container {
-    width: 50%;
-    margin: 0 auto;
-    position: relative;
-  }
+  position: fixed;
+  z-index: 1001;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.4);
+}
   
-  .login-container {
-    padding: 1em;
-  }
+.login-container {
+  padding: 1em;
+}
   
+form {
+  background-color: #c9d1d1;
+  width: 50%;
+  margin: 0 auto;
+  position: relative;
+  box-shadow: 2px 0 3px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+}
+
+
+form button {
+  background-color: orange;
+  padding: .5em 1em;
+  border: none;
+  cursor: pointer;
+  border: none;
+  width: 100%;
+}
+
+form button:hover {
+  opacity: 0.8;
+}
+  
+.cancelbtn {
+  width: auto;
+  padding: .5em 1em;
+  background-color: #f44339;
+}
+
+form .img {
+  text-align: center;
+  margin-top: 1em;
+}
+
+img.avatar {
+  border-radius: 50%;
+}
+
+span.password {
+  float: right;
+  padding-top: 1em;
+}
+  
+.close {
+  position: absolute;
+  right: 1em;
+}
+
+.close a {
+  color: #000;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.close a:hover,
+.close a:focus {
+  color: #f44339;
+  cursor: pointer;
+}
+
+input[type=text], input[type=password], input[type=email] {
+  width: 100%;
+  padding: .5em .6em;
+  margin: .5em 0;
+  display: inline-block;
+  border: 1px splid #c1c1c1;
+  box-sizing: border-box;
+}
+
+
+/* zoom animation */
+.animate {
+  animation: animatezoom 0.6s;
+}
+  
+@keyframes animatezoom {
+  from { transform: scale(0);}
+  to {
+      transform: scale(1);
+  }
+}
+
+
+@media  screen and (max-width: 600px) {
+
   form {
-    border: 2px solid rgba(189, 255, 255, 0.9);
-    background-color: rgba(189, 255, 255, 0.9);
-  }
-  
-  input[type=text], input[type=password], input[type=email] {
     width: 100%;
-    padding: .5em .6em;
-    margin: .5em 0;
-    display: inline-block;
-    border: 1px splid #c1c1c1;
-    box-sizing: border-box;
+    padding: .5em;
   }
-  
-  form button {
-    background-color: orange;
-    padding: .5em 1em;
-    border: none;
-    cursor: pointer;
-    border: none;
-    width: 100%;
-  }
-  
-  form button:hover {
-    opacity: 0.8;
-  }
-  
-  .cancelbtn {
-    width: auto;
-    padding: .5em 1em;
-    background-color: #f44339;
-  }
-  
-  .img {
-    text-align: center;
-    margin-top: 1.5em;
-  }
-  
-  img.avatar {
-    border-radius: 50%;
-  }
-  
+
   span.password {
-    float: right;
-    padding-top: 1em;
+      display: block;
+      float: none;
   }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1001;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: #000;
-    background-color: rgba(0, 0, 0, 0.4);
+
+  .cancelbtn {
+      width: 100%;
   }
-  
-  .modal-content {
-   background-color: #f1f1f1;
-   position: relative; 
+
+  .form-container {
+      width: 100%;
   }
-  
-  .close {
-    position: absolute;
-    right: 1em;
-    color: #000;
-    font-size: 2rem;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #f44339;
-    cursor: pointer;
-  }
-  
-  /* zoom animation */
-  .animate {
-    animation: animatezoom 0.6s;
-  }
-  
-  @keyframes animatezoom {
-    from { transform: scale(0);}
-    to {
-        transform: scale(1);
-    }
-  }
-  
-  
-  @media  screen and (max-width: 700px) {
-    span.password {
-        display: block;
-        float: none;
-    }
-  
-    .cancelbtn {
-        width: 100%;
-    }
-  
-    .form-container {
-        width: 100%;
-    }
-  }
+}
