modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html 	modified:   13. Django- Ecommerce Website/ecommerce/cart/templates/cart/checkout.html 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/cart.css 	new file:   13. Django- Ecommerce Website/ecommerce/static/css/checkout.css 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/login.css 	modified:   13. Django- Ecommerce Website/ecommerce/static/css/main.css 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/register.html

--- a/13. Django- Ecommerce Website/ecommerce/static/css/cart.css
+++ b/13. Django- Ecommerce Website/ecommerce/static/css/cart.css
@@ -1,6 +1,7 @@
 .cart-container {
     width: 80%;
     margin: 0 auto;
+    background-color: white;
 }
 
 table {
@@ -53,6 +54,17 @@ table .checkout {
 
 .cart-item-quantity p span{
     display: block;
+}
+
+.cart-container button {
+    cursor: pointer;
+    padding: .5em;
+    background-color: orange;
+    border: none;
+}
+
+.continue-shopping button{
+    margin: .7em;
 }
 
 
