--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/register.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/register.html
@@ -4,7 +4,7 @@
 {% block content %}
     <!-- Register form -->
 <div class="container">
-    <div class="form-container">
+    <div class="form-container authenticate">
         <form action="" method="post" class="register-form">
             <div class="img">
                 <span id="close-signup-form" class="close"><a href="{% url 'home' %}">&times;</a></span>
