--- a/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
+++ b/13. Django- Ecommerce Website/ecommerce/cart/templates/cart/cart.html
@@ -1,14 +1,16 @@
+{% extends 'store/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/cart.css' %}">
-   
-</head>
-<body>
+
+
+{% block title %}
+    Cart
+{% endblock title %}
+    
+    
+
+    
+    {% block content %}
+<div class="container">
     <div class="cart-container">
         <table>
             <div class="continue-shopping">
@@ -34,7 +36,7 @@
             </div>
             <hr>
             <div class="cart-element">
-                <div class="cart-item-image"><img src="images/apples-805124.jpg" alt="" width="20%"></div>
+                <div class="cart-item-image"><img src="{% static 'images/apples-805124.jpg' %}" alt="" width="20%"></div>
                 <div class="cart-item-name">Product 1</div>
                 <div class="cart-item-quantity">3 
                     <p><span>&#9652</span><span>&#9662</span></p>
@@ -47,5 +49,6 @@
             
         </div>
     </div>
-</body>
-</html>
+</div>
+    {% endblock content %}
+        
