--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cart.css' %}">
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
 </head>
 <body>
     <div class="body-container">
