--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/login.html
@@ -6,7 +6,7 @@
     <!-- login form -->
     
 <div class="container">
-    <div class="form-container">
+    <div class="form-container authenticate">
         <form action="{% url 'login' %}" method="POST" class="login-form">
             <div class="img">
                 <span id="close" class="close"><a href="{% url 'home' %}">&times;</a></span>
