--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/cart.css' %}">
     <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
