modified:   13. Django- Ecommerce Website/ecommerce/db.sqlite3 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/industry-4977635_1280.jpg 	new file:   13. Django- Ecommerce Website/ecommerce/media/uploads/products/leather-shoe-3706748_1280.jpg 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/admin.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/models.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/__pycache__/views.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/admin.py 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/0001_initial.py 	new file:   13. Django- Ecommerce Website/ecommerce/store/migrations/__pycache__/0001_initial.cpython-312.pyc 	modified:   13. Django- Ecommerce Website/ecommerce/store/models.py 	modified:   13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html 	modified:   13. Django- Ecommerce Website/ecommerce/store/views.py

--- a/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
+++ b/13. Django- Ecommerce Website/ecommerce/store/templates/store/product_card.html
@@ -1,18 +1,21 @@
 <div class= "product-container">
 
+{% for product in products %}
+    
     <div class="product-card">
         <a href="{% url 'product' %}">
         <div class="product-image">
-            <img src="/static/images/apples-805124.jpg" alt="">
+            <img src="{{ product.image.url }}" alt="">
         </div></a>
         <div class="product-information">
-            <p>Product 1</p>
-            <p>$ 300</p>
+            <p>{{ product.name }}</p>
+            <p>$ {{ product.price }}</p>
         </div>
         <div class="card-buttons">
             <a href="{% url 'product' %}"><button type="button" id="product-view">View</button></a>
             <a href="#"><button type="button" id="add-cart">Add to Cart</button></a>
         </div>
     </div>
+{% endfor %}
 
 </div>
